# averse

./: Cargo.toml  Makefile  README.md
plans/: 2022-07-15.yaml  2022-07-24.yaml  2022-07-31.yaml
recipes/: bagel-breakfast.yaml  cast-iron-pizza.yaml  chicken-burrito-bowl.yaml  chicken-teriyaki.yaml  chicken-tortilla-soup.yaml  chili.yaml  chimichurri.yaml  chocolate-chip-cookies.yaml  chorizo-pasta.yaml  dill-pasta-salad.yaml  pot-roast-and-veggies.yaml  red-bean-and-sausage.yaml  shephards-pie.yaml  shepherds-pie.yaml  veg-fruit-prep.yaml
src/: add.rs  behold.rs  errors.rs  lib.rs  main.rs  plan.rs  utils.rs  view.rs
tests/: test_utils.rs
